--- a/front end/index.html
+++ b/front end/index.html
@@ -10,3 +10,42 @@
     <link rel="stylesheet" href="./styles/bootstrap/css/bootstrap.css">
     <link rel="stylesheet" href="./styles/index.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css">
+</head>
+<body>
+    <header>
+        <div class="container-fluid">
+            <div class="header-container">
+                <div class="nav">
+                    <a href="./index.html"><h1 class="nav__logo">ORINOUNOURS</h1></a>
+                    <a href="./cart.html"><div class="nav__cart">
+                        <i class="fas fa-shopping-cart"></i>
+                    </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
+    <main>
+        <div class="teddy-bear__bg" >
+            <div class="teddy-bear__bg__text-group">
+                <h2 class="teddy-bear__bg__text-group__title">Créateur de nounours sur-mesure</h2>
+                <p class="teddy-bear__bg__text-group__subtitle">Nous cousons à la main de mignons petits nounours qui raviront petits et grands. Toutes nos peluches sont garanties sans danger pour vos enfants.</p>
+            </div>                
+        </div>
+        <div class="products-container">
+            <h3 class="title">Nos produits</h3>
+            <div class="products">
+                
+            </div>
+        </div>
+    </main>
+    <footer>
+        <div class="nav">
+            <a href="" class="nav__link">Contact</a>
+            <a href="" class="nav__link">Mentions légales</a>
+        </div>
+    </footer>
+    <script src="./scripts/index.js"></script>
+
+</body>
+</html>
